# blog-src

./: .gitmodules  README.md  do-something.sh  site_config.json
_opam/.opam-switch/: environment  switch-config  switch-state
_opam/.opam-switch/config/: ocaml.config
_opam/.opam-switch/install/: base.changes  base_bigstring.changes  base_quickcheck.changes  bin_prot.changes  bin_prot.install  core.changes  (+106 more)
scripts/: deploy.sh  dune  highlighting-css.sh
site/: dune
site/category/: dune  dune.inc
site/posts/: dune  dune.inc
site/static/: dune
site/tag/: dune  dune.inc
src/: 2025-05-31-blog-1.md  2025-06-01-python-lists.md  2025-06-06-calling-ocaml-from-c-from-swift-in-dune.md  2025-06-06-calling-ocaml-from-c-from-swift.md  2025-06-21-politicking.md  2025-06-22-fool-me-twice.md  2025-07-12-versioned-babel-rpc.md  2025-07-12-versioned-rpc.md  2025-07-19-hosting-servers-on-aws.md  2025-07-19-rpcs.md  2025-07-26-hosting-servers-on-linode.md  2025-07-28-non-recursive-recursive-values.md  2025-08-02-rpcs.md  2025-08-09-hosting-servers-on-linode.md  2025-08-09-open-source.md  2025-08-17-counterfactual.md  2025-08-26-firewall.md  2025-08-26-firewalls.md  2025-08-27-kerberos.md  2025-09-21-fall.md  2025-09-21-leila.md  2026-01-01-game-theory.md  2026-01-02-the-only-path-to-liberty.md  2026-01-03-securing-the-realm.md  2026-01-04-greater-west-asia.md
templates/: index.html  post.html
tools/formatting/: dune  json.ml  json.mli  markdown.ml  markdown.mli
tools/src/: dune  import.ml  index.ml  index.mli  json.ml  json.mli  markdown.ml  metadata.ml  metadata.mli  param.ml  param.mli  path_and_slug.ml  path_and_slug.mli  post.ml  post.mli  syndication.ml  syndication.mli  tools_lib.ml  yojson_date.ml  yojson_date.mli
(+6950 files in other folders)
