(rule
 (deps (universe))
 (action
  (with-stdout-to
   git-revision
   (run git log -1 --format=%h))))

(rule
 (deps
  ../tools/bin/tools.exe
  (source_tree ../src)
  (glob_files ../templates/*.html)
  git-revision)
 (action
  (with-stdout-to
   index.html
   (run
    ../tools/bin/tools.exe
    build-index
    ../src
    -git-revision
    "%{read-lines:git-revision}"
    -template
    ../templates/index.html))))

(rule
 (deps ../site_config.json git-revision)
 (action
  (with-stdout-to
   site_config.json
   (run
    sed
    -e
    "s/GIT_REVISION/%{read-lines:git-revision}/"
    ../site_config.json))))

(rule
 (targets rss.xml atom.xml)
 (deps
  ../tools/bin/tools.exe
  (source_tree ../src)
  site_config.json)
 (action
  (run
   ../tools/bin/tools.exe
   syndication-feeds
   ../src
   ./
   -site-config
   site_config.json)))
